api/src/main/java/com/example/api/error/exception/TokenException.java
package com.example.api.error.exception;

public class TokenException extends Exception{

    public TokenException(String message) {
        super(message);
    }
}
